--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,7 @@
           d.I = +d.I
           d.A = +d.A
           d.L = +d.L
+          d["Level Gains"] = +d["Level Gains"]
           d.Happyness = +d.Happyness
         });
         handler(data)
