--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
     <div class="cell python code">
       <div class="cell editor"></div>
       <div class="cell output"></div>
+      <div class="cell data"></div>
     </div>
   </div>
   <script src="/app.js"></script>
