--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,6 @@
 <head>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <script src="/jquery/jquery-1.11.3.min.js"></script>
-  <script src="/opal/opal.min.js"></script>
-  <script src="/opal/opal-parser.min.js"></script>
   <script src="/skulpt/skulpt.js"></script>
   <script src="/skulpt/skulpt-stdlib.js"></script>
   <script src="/ace-editor/ace.js"></script>
@@ -33,7 +31,7 @@
 -->
     </div>
     <div id="buttons">
-      <button id="newpy" class="newb">+Py</button><button id="newrb" class="newb">+Rb</button><button id="newmd" class="newb">+Md</button>
+      <button id="newpy" class="newb">+Py</button><button id="newmd" class="newb">+Md</button>
     </div>
 
   </div>
