restore the cursor

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,13 @@
 <body>
   <div id="mount" class="wrapper">
   </div>
+  <div id="cursor">
+    <div id="addbar">
+      &nbsp;
+      <a href="#"><div id="add-prose">+ Prose</div></a>
+      <a href="#"><div id="add-code">+ Code</div></a>
+    </div>
+  </div>
   <script type="text/babel" src="notebook.jsx"></script>
 </body>
 </html>
