moving toolchain to webpack/go

--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,6 @@
 <head>
   <title>iPython Notebook</title>
   <link href="notebook.css" media="all" rel="stylesheet">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.js"></script>
 </head>
 <body>
   <div id="mount" class="wrapper">
@@ -18,6 +14,6 @@
       <a href="#"><div id="add-code">+ Code</div></a>
     </div>
   </div>
-  <script type="text/babel" src="notebook.jsx"></script>
+  <script src="bundle.js"></script>
 </body>
 </html>
