match editor and cell height

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>iPython Notebook</title>
   <link href="notebook.css" media="all" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 </head>
 <body>
   <div id="mount" class="wrapper">
