start importing Skulpt

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
 <head>
   <title>iPython Notebook</title>
   <link href="notebook.css" media="all" rel="stylesheet">
+  <script src="/skulpt/skulpt.js"></script>
+  <script src="/skulpt/skulpt-stdlib.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 </head>
 <body>
