new editor works with life updating output

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 </head>
 <body>
-  <div id="mount" class="wrapper">
-  </div>
+  <div id="editor"></div>
+  <div id="notebook" class="wrapper"></div>
   <script src="bundle.js"></script>
 </body>
 </html>
