set page title to filename

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>iPython Notebook</title>
+  <title>notebook</title>
   <link href="notebook.css" media="all" rel="stylesheet">
   <script src="/skulpt/skulpt.js"></script>
   <script src="/skulpt/skulpt-stdlib.js"></script>
