--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <link href="notebook.css" media="all" rel="stylesheet">
   <script src="/skulpt/skulpt.js"></script>
   <script src="/skulpt/skulpt-stdlib.js"></script>
+  <script src="/d3/d3.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 </head>
 <body>
