--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,25 @@
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 </head>
 <body>
+
+  <div class="hamburger-menu">
+    <img src="hamburger-menu.png" alt="menu" />
+    <ul class="menu-content">
+      <li><a href="#">Download</a></li>
+      <li><hr/></li>
+      <li><a href="#">New</a></li>
+      <li><a href="#">Import</a></li>
+      <li><hr/></li>
+      <li><a href="#">Cheatsheet</a></li>
+      <li><a href="#">About</a></li>
+    </ul>
+  </div>
+
   <div id="editor"></div>
+
   <div id="notebook" class="wrapper"></div>
+
   <script src="bundle.js"></script>
+
 </body>
 </html>
