move menu into react -- enable simple download link

--- a/public/index.html
+++ b/public/index.html
@@ -8,21 +8,9 @@
   <script src="/d3/d3.js"></script>
 </head>
 <body>
-  <div class="hamburger-menu">
-    <img src="hamburger-menu.png" alt="menu" />
-    <ul class="menu-content">
-      <li><a href="#">Download</a></li>
-      <li><hr/></li>
-      <li><a href="#">New</a></li>
-      <li><a href="#">Import</a></li>
-      <li><hr/></li>
-      <li><a href="#">Cheatsheet</a></li>
-      <li><a href="#">About</a></li>
-    </ul>
-  </div>
+  <div id="menu"></div>
   <div id="editor"></div>
   <div id="notebook" class="wrapper"></div>
-  <div id="plot"></div>
   <script src="bundle.js"></script>
 </body>
 </html>
