remove pointless wrapper class

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <body>
   <div id="menu"></div>
   <div id="editor"></div>
-  <div id="notebook" class="wrapper"></div>
+  <div id="notebook"></div>
   <script src="bundle.js"></script>
 </body>
 </html>
