--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>notebook</title>
-  <link href="notebook.css" media="all" rel="stylesheet">
+  <link href="/notebook.css" media="all" rel="stylesheet">
   <script src="/skulpt/skulpt.js"></script>
   <script src="/skulpt/skulpt-stdlib.js"></script>
   <script src="/d3/d3.js"></script>
@@ -11,6 +11,6 @@
   <div id="menu"></div>
   <div id="editor"></div>
   <div id="notebook"></div>
-  <script src="bundle.js"></script>
+  <script src="/bundle.js"></script>
 </body>
 </html>
