--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
   <div id="menu"></div>
   <div id="editor"></div>
   <div id="notebook"></div>
+  <div id="collaborators"></div>
   <script src="/bundle.js"></script>
 </body>
 </html>
