--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <script src="/skulpt/skulpt.js"></script>
   <script src="/skulpt/skulpt-stdlib.js"></script>
   <script src="/d3/d3.js"></script>
+  <script src="/webrtc-adapter/adapter.js"></script>
 </head>
 <body>
   <div id="menu"></div>
