add include polyfill so firefox will work with current code

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>notebook</title>
   <link href="/notebook.css" media="all" rel="stylesheet">
+  <script src="/polyfill.js"></script>
   <script src="/skulpt/skulpt.js"></script>
   <script src="/skulpt/skulpt-stdlib.js"></script>
   <script src="/d3/d3.js"></script>
