--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>notebook</title>
   <link href="/notebook.css" media="all" rel="stylesheet">
+  <link href="/code-on-side.css" media="all" rel="stylesheet">
   <script src="/polyfill.js"></script>
   <script src="/skulpt/skulpt.js"></script>
   <script src="/skulpt/skulpt-stdlib.js"></script>
@@ -11,9 +12,14 @@
 </head>
 <body>
   <div id="menu"></div>
-  <div id="editor"></div>
-  <div id="notebook"></div>
   <div id="collaborators"></div>
+  <div class="notebook-wrapper">
+    <div id="notebook"></div>    
+    
+    <div class="editor-container">
+      <div id="editor"></div>      
+    </div>
+  </div>
   <script src="/bundle.js"></script>
 </body>
 </html>
