Remove editor border and add heading in editor pane

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,9 @@
     <div id="notebook"></div>    
     
     <div class="editor-container">
+      <h2 class="editor-container-heading">
+        Look, your code!
+      </h2>
       <div id="editor"></div>      
     </div>
   </div>
