Try out c3 for generating Oklahoma chart (super hacky)

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,15 @@
   <script src="/skulpt/skulpt-stdlib.js"></script>
   <script src="/d3/d3.js"></script>
   <script src="/webrtc-adapter/adapter.js"></script>
+
+  <!-- taucharts + dependencies -->
+  <script src="//cdn.jsdelivr.net/underscorejs/latest/underscore-min.js" type="text/javascript"></script>
+  <script src="//cdn.jsdelivr.net/taucharts/latest/tauCharts.min.js" type="text/javascript"></script>
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/taucharts/latest/tauCharts.min.css">
+
+  <!-- c3 + dependencies -->
+  <script src="/c3/c3.min.js"></script>
+  <link rel="stylesheet" href="/c3/c3.min.css">
 </head>
 <body>
   <div id="menu"></div>
