shoehorn in the c3 graph

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
   <div id="collaborators"></div>
   <div id="notebook"></div>
   <div id="editor"></div>      
+  <div id="oklahoma"></div>
   <script src="/bundle.js"></script>
 </body>
 </html>
