--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>notebook</title>
+  <title>Livebook</title>
   <link href="/notebook.css" media="all" rel="stylesheet">
   <script src="/js/polyfill.js"></script>
   <script src="/d3/d3.js"></script>
@@ -20,7 +20,7 @@
   <div id="menu"></div>
   <div id="collaborators"></div>
   <div id="notebook"></div>
-  <div id="editor"></div>      
+  <div id="editor"></div>
   <div id="oklahoma"></div>
   <script src="/js/notebook.js"></script>
 </body>
