Created root app component and got menu + collaborators working

--- a/public/index.html
+++ b/public/index.html
@@ -7,21 +7,21 @@
   <script src="/d3/d3.js"></script>
   <script src="/js/webrtc-adapter.js"></script>
 
-  <!-- taucharts + dependencies -->
-  <script src="//cdn.jsdelivr.net/underscorejs/latest/underscore-min.js" type="text/javascript"></script>
-  <script src="//cdn.jsdelivr.net/taucharts/latest/tauCharts.min.js" type="text/javascript"></script>
-  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/taucharts/latest/tauCharts.min.css">
-
   <!-- c3 + dependencies -->
   <script src="/c3/c3.min.js"></script>
   <link rel="stylesheet" href="/c3/c3.min.css">
 </head>
 <body>
-  <div id="notebook"></div>
-  <div id="editor"></div>
-  <div id="oklahoma"></div>
-  <div id="menu"></div>
-  <div id="collaborators"></div>
+  <div id="livebook-app">
+    
+  </div>
+  
+  <div id="notebook" style="display: none !important;"></div>
+  <div id="editor" style="display: none !important;"></div>
+  <div id="oklahoma" style="display: none !important;"></div>
+  <div id="menu" style="display: none !important;"></div>
+  <div id="collaborators" style="display: none !important;"></div>
+
   <script src="/js/notebook.js"></script>
 </body>
 </html>
