--- a/public/index.html
+++ b/public/index.html
@@ -17,11 +17,21 @@
   <link rel="stylesheet" href="/c3/c3.min.css">
 </head>
 <body>
+  <div style="display:none;">
+    <svg id="lavatar" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="-255 347 100 100" enable-background="new -255 347 100 100" xml:space="preserve"><path d="M-205,352c-24.9,0-45,20.1-45,45c0,24.9,20.1,45,45,45c24.9,0,45-20.1,45-45C-160,372.1-180.1,352-205,352z M-231,424.4  c1.8-0.8,3.6-1.4,5.5-1.9c5.2-1.2,8.3-2.9,9.3-5.1c0.8-1.7,0.3-4-1.2-6.9c-9.6-17.7-7.9-27.7-4.8-32.9c3.1-5.3,9.1-8.2,16.7-8.2  c7.6,0,13.5,2.9,16.6,8.1c3.1,5.2,4.8,15.2-4.7,33c-1.6,3-2,5.3-1.2,7c1,2.1,4.1,3.8,9.3,5c1.8,0.4,4,1.1,6.3,2.1  c-6.7,6.3-15.8,10.1-25.7,10.1C-215.1,434.8-224.2,430.8-231,424.4z"></path></svg>
+    
+    <svg height="50" width="50" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" enable-background="new -255 347 100 100" xml:space="preserve">
+      <use xlink:href="#lavatar" />
+    </svg>    
+  </div>
+
   <div id="notebook"></div>
   <div id="editor"></div>
   <div id="oklahoma"></div>
   <div id="menu"></div>
   <div id="collaborators"></div>
+
+  <!-- used by avatars --> 
   <script src="/js/notebook.js"></script>
 </body>
 </html>
