Add responsive-er styles

--- a/public/index.html
+++ b/public/index.html
@@ -17,12 +17,15 @@
   <link rel="stylesheet" href="/c3/c3.min.css">
 </head>
 <body>
-  <div id="notebook"></div>
-  <div id="editor"></div>
-  <div id="oklahoma"></div>
-  <div id="menu"></div>
-  <div id="collaborators"></div>
-
+  <div class="app-container">
+    <div id="notebook"></div>
+    <div id="editor"></div>
+    <div id="oklahoma"></div>
+    <nav class="livebook-nav">
+      <div id="menu"></div>
+      <div id="collaborators"></div>    
+    </nav>
+  </div>
   <!-- used by avatars --> 
   <script src="/js/notebook.js"></script>
 </body>
