Separate out landing page component from app-container (needs cleanup)

--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,10 @@
   <link rel="stylesheet" href="/c3/c3.min.css">
 </head>
 <body>
+  <div id="landing-page" class="landing-page-container"></div>
   <div class="app-container">
     <div id="notebook"></div>
     <div id="editor"></div>
-    <div id="oklahoma"></div>
     <nav class="livebook-nav">
       <div id="menu"></div>
       <div id="collaborators"></div>    
