Automagically copy contents of sample-notebooks dir to public/forkable FORK YEAH WOOHOO

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="/c3/c3.min.css">
 </head>
 <body>
-  <div id="landing-page" class="landing-page-container"></div>
+  <div id="landing-page"></div>
   <div class="app-container">
     <div id="notebook"></div>
     <div id="editor"></div>
