--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,7 @@
   <div class="app-container">
     <div id="notebook"></div>
     <div id="editor"></div>
-    <nav class="livebook-nav">
-      <div id="menu"></div>
-      <div id="collaborators"></div>    
-    </nav>
+    <nav id="nav" class="livebook-nav"></nav>
   </div>
   <!-- used by avatars --> 
   <script src="/js/notebook.js"></script>
