Remove nav from landing page

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <div class="app-container">
     <div id="notebook"></div>
     <div id="editor"></div>
-    <nav id="nav" class="livebook-nav"></nav>
+    <nav id="nav"></nav>
   </div>
   <!-- used by avatars --> 
   <script src="/js/notebook.js"></script>
