Position code overlays correctly and refactor css to be mobile first

--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,12 @@
 <body>
   <div id="landing-page"></div>
   <div class="app-container">
+    <div id="notebook-v2"></div>
     <div id="notebook"></div>
     <div id="editor"></div>
     <nav id="nav"></nav>
   </div>
+  <div id="scratch"></div>
   <!-- used by avatars --> 
   <script src="/js/notebook.js"></script>
 </body>
