Add medium editor styles because something about ux

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,12 @@
   <script src="/d3/d3.js"></script>
   <script src="/js/webrtc-adapter.js"></script>
 
-  <!-- c3 + dependencies -->
   <script src="/c3/c3.min.js"></script>
   <link rel="stylesheet" href="/c3/c3.min.css">
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/vendor/medium-editor.min.css">
+  <link rel="stylesheet" href="/vendor/medium-editor-theme-default.min.css">
 </head>
 <body>
   <div id="landing-page"></div>
