Unentangle routing code (sort of)

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
   <div id="landing-page"></div>
   <div class="app-container">
     <div id="notebook"></div>
+    <div id="uploader"></div>
     <div id="editor"></div>
     <nav id="nav"></nav>
   </div>
