--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="/vendor/medium-editor.min.css">
   <link rel="stylesheet" href="/vendor/medium-editor-theme-default.min.css">
+  <style id="peers-style"></style>
 </head>
 <body>
   <div class="app-container">
