Add localytics with pageview tracking

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,18 @@
   <link rel="stylesheet" href="/vendor/medium-editor.min.css">
   <link rel="stylesheet" href="/vendor/medium-editor-theme-default.min.css">
   <style id="peers-style"></style>
+  <script>
+  // Localytics
+  +function(l,y,t,i,c,s) {
+      l['LocalyticsGlobal'] = i;
+      l[i] = function() { (l[i].q = l[i].q || []).push(arguments) };
+      l[i].t = +new Date;
+      (s = y.createElement(t)).type = 'text/javascript';
+      s.src = '//web.localytics.com/v3/localytics.js';
+      (c = y.getElementsByTagName(t)[0]).parentNode.insertBefore(s, c);
+      ll('init', 'eb5f8cf871a493311eb3390-62d5d5ea-bba1-11e5-ad4d-003e57fecdee', { trackPageView: true, } /* Options */);
+  }(window, document, 'script', 'll');
+  </script>
 </head>
 <body>
   <div class="app-container">
