Add new typography

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
   <script src="/d3/d3.js"></script>
   <script src="/js/webrtc-adapter.js"></script>
 
+  <link href='//fonts.googleapis.com/css?family=Lusitana:400,700' rel='stylesheet'>
+  <link href='//fonts.googleapis.com/css?family=Lato:400,300,700' rel='stylesheet'>
+  <link href="//cdn.jsdelivr.net/font-hack/2.019/css/hack.min.css" rel="stylesheet">
   <script src="/c3/c3.min.js"></script>
   <link rel="stylesheet" href="/c3/c3.min.css">
 
