Flex box first pass (very broken)

--- a/public/index.html
+++ b/public/index.html
@@ -31,10 +31,10 @@
 </head>
 <body>
   <div class="app-container">
-    <div id="landing-page"></div>
-    <div id="notebook"></div>
+    <div class="hamburger flex-gutter"></div>
+    <div id="notebook" class="flex-notebook"></div>
+    <div class="avatars flex-gutter"></div>
     <div id="uploader"></div>
-    <div id="editor"></div>
     <nav id="nav"></nav>
   </div>
   <div id="scratch"></div>
