Switch to using calc instead of flexbox

--- a/public/index.html
+++ b/public/index.html
@@ -31,9 +31,7 @@
 </head>
 <body>
   <div class="app-container">
-    <div class="hamburger flex-gutter"></div>
-    <div id="notebook" class="flex-notebook"></div>
-    <div class="avatars flex-gutter"></div>
+    <div id="notebook"></div>
     <div id="uploader"></div>
     <nav id="nav"></nav>
   </div>
