Add viewport meta tag for responsivity (=> caching bug with position of code cells)

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Livebook</title>
+  <meta name="viewport" content="width=device-width">
   <script src="/js/polyfill.js"></script>
   <script src="/d3/d3.js"></script>
   <script src="/js/webrtc-adapter.js"></script>
